# cloud-run-parallel-task

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml  requirements.txt  useful_commands.txt
src/: main.py
