[project]
name = "cloud-run-parallel-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Hy",email = "107110503+whanyu1212@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "db-dtypes (>=1.4.0,<2.0.0)",
    "pandas-gbq (>=0.26.1,<0.27.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "google-cloud-bigquery-storage (>=2.28.0,<3.0.0)",
    "gcsfs (>=2025.2.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
